Fixed spacing on portfolio page

--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -377,7 +377,7 @@ header#masthead a {
 #page-body-wrap .peopleInfo.people,
 .peopleInfo.people {
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 0;
   width: 100%;
   float: left;
   .inner {
@@ -393,6 +393,9 @@ header#masthead a {
     @media screen and (max-width:781px) {
       flex-wrap: wrap;
       gap: 0.65em;
+    }
+    &:last-child {
+      margin-bottom: 0;
     }
   }
   .image {
